--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".SuggestionsActivity"></activity>
-        <activity android:name=".UserInfoActivity" />
+        <activity
+            android:name=".UserInfoActivity"
+            android:theme="@style/UserInfoActivityTheme" />
         <activity android:name=".QuestionnaireActivity" />
         <activity
             android:name=".MainActivity"
