--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:17.0.0'
     implementation 'com.squareup.okhttp3:okhttp:3.14.1'
     implementation 'com.google.android.gms:play-services-location:16.0.0'
+    implementation 'com.android.support:preference-v7:28.0.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
